--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 body {
-    background-image: url('Profile%20picture%20animated.jpg');
+    background-image: url('Profile picture animated.jpg');
     background-size: 100% auto; /* Adjust the background-size property */
     background-attachment: fixed;
     background-position: center;
