--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ body {
     overflow-x: hidden;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        max-width: 100%; /* Limit the width for smaller screens */
+    }
+}
+
 header {
     background-color: rgba(51, 51, 51, 0.8);
     padding: 10px;
