--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 @media only screen and (max-width: 600px) {
     body {
-        max-width: 100%; /* Limit the width for smaller screens */
+        max-width: 100vw;
     }
 }
 
